--- a/trabalhos_iniciais.ipynb
+++ b/trabalhos_iniciais.ipynb
@@ -146,239 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Regiao - Sigla</th>\n",
-       "      <th>Estado - Sigla</th>\n",
-       "      <th>Municipio</th>\n",
-       "      <th>Revenda</th>\n",
-       "      <th>CNPJ da Revenda</th>\n",
-       "      <th>Nome da Rua</th>\n",
-       "      <th>Numero Rua</th>\n",
-       "      <th>Complemento</th>\n",
-       "      <th>Bairro</th>\n",
-       "      <th>Cep</th>\n",
-       "      <th>Produto</th>\n",
-       "      <th>Data da Coleta</th>\n",
-       "      <th>Valor de Venda</th>\n",
-       "      <th>Valor de Compra</th>\n",
-       "      <th>Unidade de Medida</th>\n",
-       "      <th>Bandeira</th>\n",
-       "      <th>Região - Sigla</th>\n",
-       "      <th>Município</th>\n",
-       "      <th>Número Rua</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Período</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>04/01/2011</th>\n",
-       "      <td>SE</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>ARARAQUARA</td>\n",
-       "      <td>RAIZEN ARARAQUARA ACUCAR E ALCOOL LTDA</td>\n",
-       "      <td>43.960.335/0001-64</td>\n",
-       "      <td>RODOVIA FRANCISCO JOSE ZANIN</td>\n",
-       "      <td>Km 4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ZONA RURAL</td>\n",
-       "      <td>14801-970</td>\n",
-       "      <td>GASOLINA</td>\n",
-       "      <td>04/01/2011</td>\n",
-       "      <td>2.540</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>R$ / litro</td>\n",
-       "      <td>BRANCA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>04/01/2011</th>\n",
-       "      <td>SE</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>ARARAQUARA</td>\n",
-       "      <td>RAIZEN ARARAQUARA ACUCAR E ALCOOL LTDA</td>\n",
-       "      <td>43.960.335/0001-64</td>\n",
-       "      <td>RODOVIA FRANCISCO JOSE ZANIN</td>\n",
-       "      <td>Km 4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ZONA RURAL</td>\n",
-       "      <td>14801-970</td>\n",
-       "      <td>ETANOL</td>\n",
-       "      <td>04/01/2011</td>\n",
-       "      <td>1.730</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>R$ / litro</td>\n",
-       "      <td>BRANCA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>04/01/2011</th>\n",
-       "      <td>SE</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>ARARAQUARA</td>\n",
-       "      <td>RAIZEN ARARAQUARA ACUCAR E ALCOOL LTDA</td>\n",
-       "      <td>43.960.335/0001-64</td>\n",
-       "      <td>RODOVIA FRANCISCO JOSE ZANIN</td>\n",
-       "      <td>Km 4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ZONA RURAL</td>\n",
-       "      <td>14801-970</td>\n",
-       "      <td>DIESEL</td>\n",
-       "      <td>04/01/2011</td>\n",
-       "      <td>2.050</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>R$ / litro</td>\n",
-       "      <td>BRANCA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>05/01/2011</th>\n",
-       "      <td>SE</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>GUARULHOS</td>\n",
-       "      <td>AUTO POSTO SAKAMOTO LTDA</td>\n",
-       "      <td>49.051.667/0001-02</td>\n",
-       "      <td>RODOVIA PRESIDENTE DUTRA</td>\n",
-       "      <td>S/N</td>\n",
-       "      <td>KM 210.5-SENT SP/RJ</td>\n",
-       "      <td>BONSUCESSO</td>\n",
-       "      <td>07178-580</td>\n",
-       "      <td>GASOLINA</td>\n",
-       "      <td>05/01/2011</td>\n",
-       "      <td>2.497</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>R$ / litro</td>\n",
-       "      <td>PETROBRAS DISTRIBUIDORA S.A.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>05/01/2011</th>\n",
-       "      <td>SE</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>GUARULHOS</td>\n",
-       "      <td>AUTO POSTO SAKAMOTO LTDA</td>\n",
-       "      <td>49.051.667/0001-02</td>\n",
-       "      <td>RODOVIA PRESIDENTE DUTRA</td>\n",
-       "      <td>S/N</td>\n",
-       "      <td>KM 210.5-SENT SP/RJ</td>\n",
-       "      <td>BONSUCESSO</td>\n",
-       "      <td>07178-580</td>\n",
-       "      <td>ETANOL</td>\n",
-       "      <td>05/01/2011</td>\n",
-       "      <td>1.749</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>R$ / litro</td>\n",
-       "      <td>PETROBRAS DISTRIBUIDORA S.A.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           Regiao - Sigla Estado - Sigla   Municipio  \\\n",
-       "Período                                                \n",
-       "04/01/2011             SE             SP  ARARAQUARA   \n",
-       "04/01/2011             SE             SP  ARARAQUARA   \n",
-       "04/01/2011             SE             SP  ARARAQUARA   \n",
-       "05/01/2011             SE             SP   GUARULHOS   \n",
-       "05/01/2011             SE             SP   GUARULHOS   \n",
-       "\n",
-       "                                           Revenda      CNPJ da Revenda  \\\n",
-       "Período                                                                   \n",
-       "04/01/2011  RAIZEN ARARAQUARA ACUCAR E ALCOOL LTDA   43.960.335/0001-64   \n",
-       "04/01/2011  RAIZEN ARARAQUARA ACUCAR E ALCOOL LTDA   43.960.335/0001-64   \n",
-       "04/01/2011  RAIZEN ARARAQUARA ACUCAR E ALCOOL LTDA   43.960.335/0001-64   \n",
-       "05/01/2011                AUTO POSTO SAKAMOTO LTDA   49.051.667/0001-02   \n",
-       "05/01/2011                AUTO POSTO SAKAMOTO LTDA   49.051.667/0001-02   \n",
-       "\n",
-       "                             Nome da Rua Numero Rua          Complemento  \\\n",
-       "Período                                                                    \n",
-       "04/01/2011  RODOVIA FRANCISCO JOSE ZANIN       Km 4                  NaN   \n",
-       "04/01/2011  RODOVIA FRANCISCO JOSE ZANIN       Km 4                  NaN   \n",
-       "04/01/2011  RODOVIA FRANCISCO JOSE ZANIN       Km 4                  NaN   \n",
-       "05/01/2011      RODOVIA PRESIDENTE DUTRA        S/N  KM 210.5-SENT SP/RJ   \n",
-       "05/01/2011      RODOVIA PRESIDENTE DUTRA        S/N  KM 210.5-SENT SP/RJ   \n",
-       "\n",
-       "                Bairro        Cep   Produto Data da Coleta  Valor de Venda  \\\n",
-       "Período                                                                      \n",
-       "04/01/2011  ZONA RURAL  14801-970  GASOLINA     04/01/2011           2.540   \n",
-       "04/01/2011  ZONA RURAL  14801-970    ETANOL     04/01/2011           1.730   \n",
-       "04/01/2011  ZONA RURAL  14801-970    DIESEL     04/01/2011           2.050   \n",
-       "05/01/2011  BONSUCESSO  07178-580  GASOLINA     05/01/2011           2.497   \n",
-       "05/01/2011  BONSUCESSO  07178-580    ETANOL     05/01/2011           1.749   \n",
-       "\n",
-       "            Valor de Compra Unidade de Medida                      Bandeira  \\\n",
-       "Período                                                                       \n",
-       "04/01/2011              NaN        R$ / litro                        BRANCA   \n",
-       "04/01/2011              NaN        R$ / litro                        BRANCA   \n",
-       "04/01/2011              NaN        R$ / litro                        BRANCA   \n",
-       "05/01/2011              NaN        R$ / litro  PETROBRAS DISTRIBUIDORA S.A.   \n",
-       "05/01/2011              NaN        R$ / litro  PETROBRAS DISTRIBUIDORA S.A.   \n",
-       "\n",
-       "           Região - Sigla Município Número Rua  \n",
-       "Período                                         \n",
-       "04/01/2011            NaN       NaN        NaN  \n",
-       "04/01/2011            NaN       NaN        NaN  \n",
-       "04/01/2011            NaN       NaN        NaN  \n",
-       "05/01/2011            NaN       NaN        NaN  \n",
-       "05/01/2011            NaN       NaN        NaN  "
+       "\"gasgas.set_index('Data da Coleta',inplace=True,drop=False)\\ngasgas.rename_axis('Período',inplace=True)\\ngasgas.head()\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
