--- a/gas_separado_difs.ipynb
+++ b/gas_separado_difs.ipynb
@@ -931,7 +931,8 @@
    "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.11 64-bit ('rsd': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -945,8 +946,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
